fixed alignment in photos.html

--- a/custom.css
+++ b/custom.css
@@ -2,10 +2,10 @@
   color: #ccc; }
 
 .navbar {
-  background: -webkit-linear-gradient(#4c67a1, #3b5998);
-  background: -o-linear-gradient(#4c67a1, #3b5998);
-  background: -moz-linear-gradient(#4c67a1, #3b5998);
-  background: linear-gradient(#4c67a1, #3b5998);
+  background: -webkit-linear-gradient(#4C67A1, #3B5998);
+  background: -o-linear-gradient(#4C67A1, #3B5998);
+  background: -moz-linear-gradient(#4C67A1, #3B5998);
+  background: linear-gradient(#4C67A1, #3B5998);
   margin-bottom: 0px; }
 
 .navbar a {
@@ -106,3 +106,7 @@
 
 .clear-div {
   clear: both; }
+
+/******************** photos **************************/
+
+/*# sourceMappingURL=custom.css.map */
